--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>My first HTML document</title>
 </head>
 <body>
-    <h1>Heading 1</h1>
+    <h1>Heading 1 - edited</h1>
     <p>My first paragraph.</p>
     <a href="https://www.youtube.com">CLICK ME</a>
     <h2>Emebdding images in HTML</h2>
