--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
 
     <script src="js/vegalite_vis.js"></script>
-    <title>THE WORLD OF INTERNET</title>
+    <title>THE INTERNET ERA</title>
 </head>
 <body>
     <div class="container">
@@ -147,7 +147,7 @@
       </div>
       <!-- Footer -->
       <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-        © A visualization by Samsun
+        © 2021, A visualization by Samsun
       </div>
       <!-- Footer -->
     </div>    
